# zero2prod

./: Cargo.toml  Dockerfile  configuration.toml
.github/actions/: general.yml
.github/workflows/: general.yml
configuration/: base.toml  local.toml  production.toml
migrations/: 20210414002151_add_status_to_subscriptions.sql  20210414003220_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscription_confirm.rs  subscriptions.rs
