[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.3"
serde = {version = "1", features=["derive"]}
config = ""
uuid = { version = "0.8.1", features = ["v4"]}
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "*"
tokio = "1"
actix-rt = "2"
